# football_analysis

./: .gitignore  main.py  pyproject.toml  yolo_inference.py
camera_movement_estimator/: camera_movement_estimator.py
development_and_analysis/: color_assignement.ipynb
speed_and_distance_estimator/: speed_and_distance_estimator.py
team_assigner/: team_assigner.py
trackers/: tracker.py
training/: football_training_yolo_v5.ipynb
view_transformer/: view_transformer.py
