[tool.poetry]
name = "football-analysis"
version = "0.1.0"
description = ""
authors = ["m"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
opencv-python = "^4.10.0.84"
torch = { url = "https://download.pytorch.org/whl/cpu/torch-2.2.2-cp311-none-macosx_10_9_x86_64.whl"}
ultralytics = "^8.2.75"
supervision = "^0.22.0"
scikit-learn = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
